--- a/stats/templates/stats/dashboard.html
+++ b/stats/templates/stats/dashboard.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
-<h2>Статистика обучения</h2>
+{# --- СТАРТ: заменяю заголовок и кнопки на единый flex-блок --- #}
+<div class="d-flex flex-wrap align-items-center justify-content-between gap-2 mb-4">
+    <h2 class="mb-0">Статистика обучения</h2>
+    <div class="d-flex gap-2 flex-wrap">
+        <a href="{% url 'stats:charts' %}" class="btn btn-primary">Графики</a>
+        <a href="{% url 'stats:recommendations' %}" class="btn btn-success">Рекомендации</a>
+        <a href="{% url 'stats:test_history' %}" class="btn btn-info">История тестов</a>
+    </div>
+</div>
+{# --- КОНЕЦ: заменяю старый заголовок и кнопки --- #}
 
 {# Основные метрики #}
 <div class="row mb-4">
@@ -174,17 +184,6 @@
                     <p class="text-muted">Отличная работа! Продолжайте в том же духе.</p>
                 {% endif %}
             </div>
-        </div>
-    </div>
-</div>
-
-{# Навигация по статистике #}
-<div class="row">
-    <div class="col-12">
-        <div class="d-flex gap-2">
-            <a href="{% url 'stats:charts' %}" class="btn btn-primary">Графики</a>
-            <a href="{% url 'stats:recommendations' %}" class="btn btn-success">Рекомендации</a>
-            <a href="{% url 'stats:test_history' %}" class="btn btn-info">История тестов</a>
         </div>
     </div>
 </div>
